--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.12.7",
     "@strapi/strapi": "4.12.7",
     "pg": "^8.11.3",
-    "pg-connection-string": "^2.6.2"
+    "pg-connection-string": "^2.6.2",
+    "strapi4-ftp-provider": "^1.0.5"
   },
   "author": {
     "name": "A Strapi developer"
