--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.12.7",
     "@strapi/plugin-users-permissions": "4.12.7",
+    "@strapi/provider-upload-local": "^4.13.1",
     "@strapi/strapi": "4.12.7",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2"
