--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/provider-upload-local": "^4.13.1",
     "@strapi/strapi": "4.12.7",
     "pg": "^8.11.3",
-    "pg-connection-string": "^2.6.2"
+    "pg-connection-string": "^2.6.2",
+    "strapi-provider-upload-ipfs-storage": "^1.1.0"
   },
   "author": {
     "name": "A Strapi developer"
@@ -25,7 +26,7 @@
     "uuid": "44e48b2e-d927-4373-bbd3-4d36efa24227"
   },
   "engines": {
-    "node": "19.9.0",
+    "node": "18.x.x",
     "npm": "9.8.1"
   },
   "license": "MIT"
